posts, mongo schema and post route

--- a/server/package.json
+++ b/server/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "hapi": "^10.0.0",
     "inert": "^3.0.1"
+  },
+  "devDependencies": {
+    "jasmine-node": "^1.14.5",
+    "mongoose": "^4.1.8"
   }
 }
