--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "hapi": "^10.0.0",
+    "hapi-mongodb": "^3.0.0",
     "inert": "^3.0.1"
   },
   "devDependencies": {
