--- a/client/bower.json
+++ b/client/bower.json
@@ -21,6 +21,7 @@
     "angular-ui-router": "~0.2.15",
     "bootstrap": "~3.3.5",
     "bootstrap-css": "~3.3.4",
-    "moment": "~2.10.6"
+    "moment": "~2.10.6",
+    "textAngular": "~1.4.6"
   }
 }
