--- a/client/bower.json
+++ b/client/bower.json
@@ -22,6 +22,7 @@
     "bootstrap": "~3.3.5",
     "bootstrap-css": "~3.3.4",
     "moment": "~2.10.6",
-    "textAngular": "~1.4.6"
+    "textAngular": "~1.4.6",
+    "AngularJS-Toaster": "angularjs-toaster#~0.4.15"
   }
 }
