--- a/client/bower.json
+++ b/client/bower.json
@@ -25,6 +25,7 @@
     "textAngular": "~1.4.6",
     "AngularJS-Toaster": "angularjs-toaster#~0.4.15",
     "underscore": "~1.8.3",
-    "angular-underscore-module": "~1.0.1"
+    "angular-underscore-module": "~1.0.1",
+    "lazy.js": "~0.4.2"
   }
 }
