--- a/client/bower.json
+++ b/client/bower.json
@@ -19,13 +19,15 @@
     "angular": "~1.4.6",
     "angular-momentjs": "~0.2.2",
     "angular-ui-router": "~0.2.15",
-    "bootstrap": "~3.3.5",
     "bootstrap-css": "~3.3.4",
     "moment": "~2.10.6",
     "textAngular": "~1.4.6",
-    "AngularJS-Toaster": "angularjs-toaster#~0.4.15",
+    "AngularJS-Toaster": "~0.4.16",
     "underscore": "~1.8.3",
     "angular-underscore-module": "~1.0.1",
-    "lazy.js": "~0.4.2"
+    "lazy.js": "~0.4.2",
+    "angular-animate": "~1.4.7",
+    "font-awesome": "fontawesome#~4.4.0",
+    "rangy": "~1.3.0"
   }
 }
